infrastructure/_overlays/infra01/configurations/authentication/fermedujointout-fr/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-fermedujointout-fr
  namespace: controller-authentication
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.fermedujointout.fr`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    secretName: auth-fermedujointout-fr-tls
